# njit-covid-cxr

./: README.md  config.yml  pyproject.toml  setWinEnv.ps1
results/predictions/20201106-135747/: predictions.csv  predictions.xlsx
src/: predict.py  train.py
src/interpretability/: lime_explain.py
