[tool.poetry]
name = "covid-cxr"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
tensorboard = "^2.3.0"
opencv-python = "^4.4.0"
tqdm = "^4.51.0"
scikit-image = "^0.17.2"
numpy = "^1.18.0"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
dill = "^0.3.3"
pydicom = "^2.1.0"
imbalanced-learn = "^0.7.0"
lime = "^0.2.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
